DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2006-08-03 patrick  Get rid of vpr-config and opt for flagpoll
                    NEW VERSION: 1.1.25
2006-07-12 patrick  Changed the DLL name to include the version as part of the
                    base library name on Windows. Implemented automatic
                    linking of the VPR library.
                    NEW VERSION: 1.1.24
2006-07-11 patrick  Link against the dynamic version of the Boost.Filesystem
                    library on Windows.
2006-06-25 patrick  Added support for building universal binaries on Mac OS X.
                    NEW VERSION: 1.1.23
2006-05-23 patrick  Applied versioning to the header and data directories.
                    NEW VERSION: 1.1.22
2006-05-23 patrick  Changed the static and shared library names to include the
                    VPR version as part of the base library name rather than
                    as part of the file extension.
                    NEW VERSION: 1.1.21
2006-05-12 allenb   Removed exception specifications from everything but
                    the exception classes.
                    NEW VERSION: 1.1.20
2006-05-09 allenb   Change thread exception handling to output .what()
                    for all exceptions based on std::exception.
                    NEW VERSION: 1.1.19-1
2006-05-04 allenb   Added operator<< for ReturnStatus.
                    NEW VERSION: 1.1.19
2006-04-21 patrickh Added vpr::ConnectionAbortedException.
                    NEW VERSION: 1.1.18
2006-04-14 aronb    Added a socket option for sending broadcast UDP packets.
                    NEW VERSION: 1.1.17
2006-02-15 patrickh Replaced vpr::ThreadMemberFunctor<T> and
                    vpr::ThreadNonMemberFunctor by Boost.Function.
                    NEW VERSION: 1.1.16
2005-12-21 aronb    Added vpr::BufferObjectReader::STRING_SIZE_LENGTH and
                    vpr::BufferObjectWriter::STRING_SIZE_LENGTH.