@@ -1,3 +1,4 @@
+1.1.26-0 @08/09/2006 14:25:00 UTC@
 1.1.25-0 @08/03/2006 13:40:00 UTC@
 1.1.24-0 @07/12/2006 14:35:00 UTC@
 1.1.23-0 @06/26/2006 02:40:00 UTC@
