@@ -1,6 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
-2006-08-03 patrick  Get rid of vpr-config and opt for flagpoll
+2006-08-09 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
+                    NEW VERSION: 1.1.26
+2006-08-03 dshipton Get rid of vpr-config and opt for flagpoll
                     NEW VERSION: 1.1.25
 2006-07-12 patrick  Changed the DLL name to include the version as part of the
                     base library name on Windows. Implemented automatic
